[tool.poetry]
packages = [{include = "mazegen", from = ".."}]

[project]
name = "mazegen"
version = "1.0.0"
description = "Standalone maze generation library"
authors = [
    {name = "Kevin Bertrand",email = "kebertra@student.42mulhouse.fr"},
    {name = "Olivier Robert",email = "orobert@student.42mulhouse.fr"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
